Include javax.xml so extension works on OpenJDK 11