@@ -1,16 +1,13 @@
 package application;
 
-import static org.junit.Assert.assertEquals;
 import helpers.HTTPHelpers;
-
-import java.io.IOException;
-import java.io.UnsupportedEncodingException;
-import java.util.zip.DataFormatException;
-
 import org.junit.Test;
 
-import sun.misc.BASE64Decoder;
-import sun.misc.BASE64Encoder;
+import java.io.IOException;
+import java.util.Base64;
+import java.util.zip.DataFormatException;
+
+import static org.junit.Assert.assertEquals;
 
 public class HTTPHelpersTest {
 	HTTPHelpers helpers = new HTTPHelpers();
@@ -19,15 +16,15 @@ public class HTTPHelpersTest {
 	String decompressed = "<samlp:LogoutResponse xmlns:samlp=\"urn:oasis:names:tc:SAML:2.0:protocol\" xmlns:saml=\"urn:oasis:names:tc:SAML:2.0:assertion\" ID=\"_6acb7c41720ef5f00c4c32f6016cb39d7f1c09a888\" Version=\"2.0\" IssueInstant=\"2015-07-19T13:34:02Z\" Destination=\"http://samluelsp/simplesaml/module.php/saml/sp/saml2-logout.php/default-sp\" InResponseTo=\"_9268bb72d0db244ef79cd309265edebbdee77d9b98\"><saml:Issuer>http://samluelidp</saml:Issuer><samlp:Status><samlp:StatusCode Value=\"urn:oasis:names:tc:SAML:2.0:status:Success\"/></samlp:Status></samlp:LogoutResponse>";
 	
 	@Test
-	public void testInflate() throws UnsupportedEncodingException, IOException, DataFormatException {
-		byte[] valueDecoded = (new BASE64Decoder()).decodeBuffer(compressed);
+	public void testInflate() throws IOException, DataFormatException {
+		byte[] valueDecoded = Base64.getDecoder().decode(compressed);
 		assertEquals(decompressed, new String(helpers.decompress(valueDecoded, true), "UTF-8"));
 	}
 	
 	@Test
-	public void testDeflate() throws UnsupportedEncodingException, IOException, DataFormatException {
+	public void testDeflate() throws IOException {
 		byte [] valueCompressed = helpers.compress(decompressed.getBytes("UTF-8"), true);
-		String result = (new BASE64Encoder()).encode(valueCompressed);
+		String result = Base64.getEncoder().encodeToString(valueCompressed);
 		result = result.replaceAll("\\r?\\n", "");
 		assertEquals(compressed, result);
 	}
